the end del espiritu libre

--- a/Nietzsche/nietzsche_espiritu_libre.org
+++ b/Nietzsche/nietzsche_espiritu_libre.org
@@ -714,6 +714,86 @@ su cuerpo y en sus impulsos. Sin embargo, esto no significa un
 determinismo absoluto, sino que es posible la libertad y el
 ennoblecimineto si el individuo lucha por superar esos
 condicionamientos gregarios para convertirse en alguien original y
-superior.
+superior.\\
 
+Queda excluida la hipótesis científica de un ser humano como organismo
+biológicamente constituido, e.g. por sus genes, y al cual luego se
+incorporan elementos externos como sus valores, hábitos etc. Para
+N. incorporar no significa añadir algo nuevo a una especie de
+naturaleza o de código genético que desde el principio es lo
+originario y sustancial del ser humano, sino configurar el cuerpo
+desde cero, convertir en cuerpo una determinada estructura pulsional,
+una serie de dispositivos pulsionales requeridos como condiciones de
+existencia. Se nos ha condicionado mediante la educación con unas
+técnicas destinadas a modificar la economía pulsional de nuestro
+cuerpo. Esta técnicas, aplicadas durante un largo espacio de tiempo,
+consiguen fijar en nosotros ciertas regularidades de reaccionar y de
+comportarnos, hasta crearnos una especie de identidad o personalidad
+como yo-mismo.\\
+Esta misma estrategia es la que tiene ahora que seguir el espíritu
+libre para sustituir, si es necesario, ese condicionamiento por
+otro.\\
+Puesto que un nuevo valor logra imponerse mediante una coacción
+duradera y logra así nuevos dispositivos pulsionales, es posible poner
+en práctica esa misa coacción a la economía pulsional del cuerpo y
+hacer nuevos valores, nuevas condiciones de existencia.\\
 
+Construir en uno mismo un tipo superior de ser humano en conformidad
+con el impulso de autosuperación implica hacerlo necesario. Hacer
+necesario el azar de las luchas que forman a los individuos una
+necesidad, la necesidad de la que surge ese carácter superior.\\
+El objetivo de la libertad sería llegar a ser lo que se es, es decir
+llegar a ser lo que se puede ser.\\
+
+Esta propuesta de realizar un hombre nuevo y una cultura nueva, que
+lleguen a ser lo que podrían ser, no corresponde a un ingenuo
+voluntarismo, sino que se trata de incardinar en las condiciones de
+creación de toda cultura.\\
+Por eso N. intenta dar la vuelta a la concepción básica de nuestra
+cultura occidental, en su pensamiento más maduro, y ofrecer una nueva
+visión del mundo a partir de la hipótesis de voluntad de poder, en la
+que es posible entender el ejercicio de la libertad como construcción
+positiva de uno mismo y de la cultura.\\
+
+El ejemplo de cómo se conquista la libertad lo tenemos en la nueva
+concepción del filósofo como espíritu libre y de la filosofía que se
+derivan de este planteamiento. La libertad de espíritu representa la
+primera característica del filósofo y del concepto de filosofía, como
+capacidad de afrontar lo desconocido con una actitud indagadora
+sincera y radical.\\
+Esto es así porque lo que sucede a muchos filósofos y científicos que
+anteponen la necesidad de certeza, de seguridad y de estabilidad al
+placer de la libertad es que acaban siendo espíritus sometidos y
+dependientes. La libertad de espíritu se define por la independencia,
+por la capacidad de poder pensar y actuar sin estar sometido a la
+autoridad de los valores en vigor, e.g. empezando por el valor de
+verdad o de bondad atribuido a l ideal científico moderno.\\
+
+La independencia del espíritu libre se mide por su capacidad de pensar
+y de vivir en función de valores diferentes a los comunes, incluso
+opuestos a éstos si fuera necesario.\\
+Nietzsche representa el espíritu libre con las metáforas del
+explorador o del aventurero. Pues la libertad e independencia es lo
+que le permite descubrir, ensayar y crear nuevos valores y nuevas
+interpretaciones. Esta misma independencia del espíritu libre la
+aplica también a la cuestión de las creencias, afirmando que lo propio
+de este espíritu libre es carecer, en buena medida, de ellas: Cuando
+un hombre llega a la convicción básica de que se le tiene que dar
+órdenes, se torna creyente. A la inversa, una liberta de la voluntad
+en la que un espíritu despida de toda creencia, de todo deseo de
+certeza como si se mantuviere sobre cuerdas y posibilidades ligeras y
+en bailar hasta al borde de los abismos. Un espíritu tal sería el
+espíritu libre por excelencia.\\
+
+Con esto Nietzsche se refiere al tipo humano de la metafísica y de l
+cristianismo tradicionales, que vive y regula su existencia en función
+de certezas dogmáticas y creencias absolutas. El tipo humano que liga
+obediencia de manera fundamental a la creencia. Se convierte así en un
+esclavo. Porque lo instintivo del escalo es, justamente, la necesidad
+de absolutos, y esa necesidad la mediatizan siempre unas creencias.\\
+La jerarquía de los tipos humanos, establecidas en función de su mayor
+o menor fuerza, podría tener como uno de sus criterios diferenciales
+su mayor o menor necesidad de creencias. Lo que él viene a decir
+entonces es que cuanta mayor fuerza tiene un individuo, menos
+necesidad tiene de estas certezas absolutas, que son en realidad,
+elementos de protección y de seguridad como remedio a su debilidad.
