--- a/Nietzsche/nietzsche_espiritu_libre.tex
+++ b/Nietzsche/nietzsche_espiritu_libre.tex
@@ -1,4 +1,4 @@
-% Created 2023-08-24 dj. 11:41
+% Created 2023-08-24 dj. 19:28
 % Intended LaTeX compiler: pdflatex
 \documentclass[a4paper, 10pt, twocolumn, spanish]{article}
 \usepackage[utf8]{inputenc}
@@ -33,7 +33,7 @@
 
 
 \section{Etapa intermedia de Nietzsche}
-\label{sec:org03df3ca}
+\label{sec:org81b02b6}
 El año 1876 es un año importante en la vida de N. y de su obra. Es un
 año de crisis que se distancia de su vida de juventud, resaltando
 diferencias ideológicas con su pensamiento previo debido a la
@@ -284,7 +284,7 @@ ya juicios: los estímulos se distinguen según promuevan o no el
 sentimiento de poder.
 
 \section{Nietzsche ilustrado}
-\label{sec:org502a45f}
+\label{sec:org2d4f695}
 En \emph{humano, demasiado humano} el pensamiento de Nietzsche inicia su
 período ilustrado.\\[0pt]
 
@@ -428,7 +428,7 @@ En suma, la muerte de Dios es la premisa necesaria para la creación de
 la nueva moral y de sus nuevos valores.
 
 \section{Configuración del método genealógico}
-\label{sec:org7ecccb2}
+\label{sec:org8ce583d}
 La genealogía es el intento de comprender los fenómenos de la cultura,
 e.g. la moral, mostrando el ángulo pulsional o instintivo desde el que
 son explicables.\\[0pt]
@@ -504,7 +504,8 @@ dignidad como persona, sino que el hombre es el que produce los
 valores, los instaura lo mismo que produce el conocimiento el arte o
 la técnica.\\[0pt]
 
-AL no haber advertido esto, Nietzsche acusa a todos los filósofos
+\textbf{El contraste del pensamiento de Nietzsche y los filósofos}.
+Al no haber advertido esto, Nietzsche acusa a todos los filósofos
 anteriores de superficialidad e hipocresía. Por muy radicales y
 críticos que se manifestasen a la hora de elucidar racionalmente una
 doctrina o una tesis dada, siempre silenciaban y dejaban sin analizar
@@ -521,4 +522,307 @@ por qué hay que creer y aceptar un bien en sí opuesto a un mal en sí
 como formando parte de la estructura misa de la realidad.\\[0pt]
 Nada de esto se analiza en ningún momento, sino que son cosas que se
 afirman, sin más, dogmáticamente.\\[0pt]
+
+Nietzsche critica la actitud de algunos filósofos de afirmar
+determinadas posiciones teóricas junto a la evidente fragilidad de las
+razones con las que tratan de demostrarlas.\\[0pt]
+En concreto, señala la duda metódica de Descartes, con la que se
+pretende alcanzar un punto de partida radicalmente nuevo e indudable
+para la filosofía moderan pero basada con viejos argumentos
+ontológicos, los cuales ni siquiera fueron ni retocados ni
+perfeccionados.\\[0pt]
+Análogamente pasaría con las razones, demostraciones y postulados con
+los que Kant se propone recuperar el mundo suprasensible y los
+nóumenos (:aquello que es solo cognoscible, contrario al fenómeno) de
+la vieja metafísica.\\[0pt]
+Las razones aducidas por Descartes y Kant, para mantener en vigor el
+transmundo de la metafísica no pueden evitar ofrecer el aspecto de
+racionalizaciones o justificaciones \emph{a posteriori}, subsiguientes a
+una afirmación previa, no racional de la posición sin más que se
+trata de mantener.\\[0pt]
+
+Estas opciones previas y estas afirmaciones nunca justificadas
+muestran la necesidad de preguntar por las fuentes pulsionales
+respecto de las cuales toda esa justificación consciente no es más que
+la fase final de un proceso subterráneo producto de una historia larga
+y atormentada.\\[0pt]
+Según N. principalmente dos razones por los cuales los filósofos no
+han profundizado nunca en este tipo de explicación. Primera, porque
+toda nuestra actividad espiritual y consciente se asienta en una serie
+de procesos iconscientes cuyo funcionamiento resulta inaccesible a
+nosotros de manera directa, aunque podemos acceder de manera indirecta
+a través de las manifestaciones, traducciones o síntomas de lo
+inconsciente en lo consciente: Solo hay estados corporales. Los
+estados mentales son sus consecuencia y símbolos. Escindir el mundo
+externo y el interno como hacen los metafísicos es ya un juicio de los
+sentidos.\\[0pt]
+
+Segunda, porque desde el dualismo metafísico que separa mundo sensible
+y mundo inteligible, alma y cuerpo, se opina que en las esfera
+espiritual del conocimiento y de los valores morales sólo pueden darse
+relaciones entre ideas o esencias de tal manera que lo espiritual y lo
+suprasensible de ningún modo podía proceder de su contrario, lo
+sensible, lo instintivo, el devenir.\\[0pt]
+Espíritu e instintos, razón y pasiones han sido siempre considerados
+como opuestos e incompatibles, y nunca se había advertido de la
+continuidad que hay entre ellos. Hasta ahora la filosofía metafísica
+superaba esta dificultad negando la génesis de una cosa a partir de
+otra y suponía para las cosas valoradas como superiores un origen
+milagroso, directamente del núcleo y la esencia de la cosa-en-sí. En
+cambio la filosofía histórica, en absoluto separada de la ciencia
+natural, ha constatado en casos particulares, con carácter general,
+que no son opuestos.\\[0pt]
+
+Tanto la actividad del pensamiento como los fenómenos morales deben
+ser comprendidos como el resultado producido por un cierto tipo de
+relaciones interpulsionales que afloran a la consciencia u se plasman
+en la conducta. Desde esta persepctiva, la filosofía se entiende como
+una genealogía para identificar los instintos y pulsiones que actúan
+inherentemente en las diferentes interpretaciones y valoraciones
+humanas. La intención de N. no es promover un fisiologismo
+materialista, sino la de desligar la noción de pulsión y su dinámica
+de la condena y exclusión a la que le había sometido el dualismo
+metafísico.  Tampoco hay reduccionismo biológico porque Nietzsche no
+reivindica haber dado con una explicación última de tal fenómeno.\\[0pt]
+En último término, los instintos y los procesos infraconscientes nos
+son directamente incognoscibles. Sólo podemos dar de su dinámica
+simples interpretaciones, porque nunca no en ningún caso nos es
+posible una relación objetiva con la realidad.\\[0pt]
+La cosa-en-sí es siempre para nosotros incognoscible e
+inaccesible. Por eso, el análisis genealógico no se concibe como el
+descubrimiento de las razones inconscientes que constituiría la trama
+objetiva de la realidad. Es sólo la puesta de manifiesto de que la
+realidad no es pensable nunca para nosotros como significado en sí,
+sino que es siempre un proceso de múltiples interpretaciones
+producidas de manera incesante por nuestros impulsos. Y nunca podemos
+salir de ahí en ningún caso.\\[0pt]
+
+Así, la genealogía se entiende como oposición al dogmatismo
+espiritualista y metafísico, i.e. desconfianza de los valores morales
+racionalmente universalizados y rechazo de las pretensiones ilusorias
+del ser humano de poder dominar con la simple conciencia la
+significación involuntaria de sus actos.\\[0pt]
+Esta óptica genealógica se desdobla en dos momentos metodológicos. La
+primera tarea de este método es tratar de identificar las fuentes
+pulsionales que producen las interpretaciones y las valoraciones
+morales, las pulsiones vitales que les han dado nacimiento como
+condiciones de existencia para un determinado tipo de individuos.\\[0pt]
+
+Mirar lo que hay detrás o debajo de esas valoraciones, explorar la
+procedencia inconsciente de una afirmación o de un comportamiento,
+porque todo fenómeno consciente enmascara algo, y el análisis
+genealógico ofrece una interpretación sobre lo que se oculta bajo esta
+máscara. Comprendiendo lo que hay por debajo, es posible superar el
+dogmatismo y trabajar con un concepto de filosofía como tarea
+interpretativa y no ya como búsqueda de la causa o del fundamento.\\[0pt]
+
+En una segunda fase, se trata de juzgar el valor de la moral
+analizada, juzgar el valor de sus valores, analizar la conformidad o
+no con las exigencias de la vida.\\[0pt]
+El valor de los valores se refiere al carácter beneficiosos o
+perjudicial de una interpretación moral para los individuos que hacen
+de esos valores-creencias sus condiciones de existencia.\\[0pt]
+
+Así pues, la genealogía que N. llevará a cabo de la moral europea,
+inspirada por los ideales ascéticos y resultado de la rebelión de los
+esclavos de Roma contra el paganismo antiguo, se lleve acabo primero
+mostrando sus orígenes y, segundo, analizando y juzgando su incidencia
+en el desarrollo de las sociedades europeas que hecho de esta moral su
+condición de vida hasta hoy.\\[0pt]
+El juicio sobre el valor de los valores adopta con frecuencia en N. la
+forma de un diagnóstico. Las interpretaciones que el análisis
+genealógico estudia son producidas por el cuerpo como sistema
+pulsional, i.e., son la manifestación de ciertos estados corporales,
+son síntomas de la dinámica efectiva de los dispositivos pulsionales
+propios de ese tipo de individuos.
+
+\section{Conquistar la libertad}
+\label{sec:orgd1e4d6c}
+Según Nietzsche, mientras que la metafísica es el intento de encontrar
+el ser verdadero detrás del mundo de las apariencias, la filosofía
+debería ser simplemente el intento de describir el mundo sin pretender
+decir ni descubrir el ser del mundo. Es decir, lo que el filósofo
+tendría que hacer no es inventarse trasmundos, sino describir lo más
+exactamente posible la realidad en la que estamos y de la que formamos
+parte.\\[0pt]
+La idea más potente e innovadora de N. acerca de lo que es esa
+realidad no fue la filosofía de ningún filósofo, sino la tragedia
+griega, la cual le enseñó también lo esencial respecto a qué se puede
+y se debe pensar que es la libertad.\\[0pt]
+
+Primero se fija en que lo propio de la actitud trágica no es buscar
+ningún consuelo y seguridad ante el sinsentido del mundo,
+autoengañarse un mismo con visiones teleológicas o mecanicistas
+asumidas como la verdad.\\[0pt]
+El mundo, nuestra existencia, no tienen ningún sentido. O tienen el
+sentido que nosotros les queremos dar. Hay que poner en suspense la
+creencia en la existencia de cualquier entramado de leyes causales
+como estructura mecánica de la realidad a la que todo estaría
+sometido. Las tragedias muestran lo contrario de esto. Muestran los
+aspectos de azar, indeterminación lucha, sufrimiento y destrucción que
+forma parte del mundo y de nuestra existencia y del funcionamiento de
+esta vida. Es decir, muestran cierto caos engendrado por las
+condiciones mismas de ser y de funcionar este mundo.\\[0pt]
+
+Las tragedia, mostrando ese devenir inseparable de la creación y de la
+destrucción, invitan a tomar conciencia y aceptar la vida como es, sin
+autoengaños ilusorios de salvación y redención.\\[0pt]
+Esta aceptación de la vida tal como es renaturaliza al individuo, le
+devuelve a la naturaleza en el sentido que se sabe entonces, no ya un
+ser suprasensible y sobrenatural, sino naturaleza él también u parte
+de esta tierra.\\[0pt]
+Como tal un ser funciona con la misma dinámica con la que funciona esa
+realidad trágica en la que está y es. Según N. a ser humano sólo se le
+comprende adecuadamente cuando se prescinde del dualismo alma-cuerpo y
+se le ve incardinado en la naturaleza y parte del mundo. Es decir, no
+se le puede considerar nunca independientemente de su base pulsional,
+de esa pertinencia de su ser con la realidad de la naturaleza que son
+sus impulsos.\\[0pt]
+
+Desde esta perspectiva podríamos pensar que el ser humano no es libre,
+ya que el ser humano incardinado en la naturaleza, es él mismo
+naturaleza y cuyo ser descansa sobre su base pulsional.\\[0pt]
+En la tragedia misma se muestra una necesidad en el acontecer del
+mundo que no puede ser entendida en el sentido de una necesidad
+mecánica regida por la ley de la causa y el efecto, sino que es una
+necesidad compatible con la libertad. Es decir, una necesidad no
+entendida como efecto inexorable de causas inexorables.\\[0pt]
+Las premisas son: Primera, se entiende el mundo como una lucha de
+fuerzas en continua confrontación unas con otras, tanto de la
+naturaleza como en el plano de la cultura y la historia.\\[0pt]
+Segunda, el individuo humano está inserto en esa lucha omo un amás de
+esas fuerzas que componen el mundo, y que contribuye a su devenir y a
+su acontecer.\\[0pt]
+Lo importante es comprender que al actuar como una de esas fuerzas, el
+ser humano no lo hace obedeciendo fatalmente a la presión de una
+coacción absoluta y determinista procedente de una ley cósmica o del
+destino. El destino que se escenifica en la tragedia no es una
+necesidad \emph{a priori} y en sí que elimina \emph{de facto} la libertad del
+héroe. Si no hay lucha, conflicto entre destino y libertad, no hay
+tragedia. El efecto estético de la catarsis trágica se debe a que el
+héroe resiste a su destino que amenaza con aplastarle, se opone a él
+con el querer de una voluntad activa de superación que quiere
+modificarlo que es lo contrario de una resignación pasiva,
+paralizadora y fatalista.\\[0pt]
+
+\textbf{Nobles vs espiritus débiles}. Desde esta perspectiva, Nietzsche
+considera que no todos los seres humanos son igualmente libres o no
+libres. La libertad, es un privilegio exclusivo de las naturalezas
+superiores y nobles. Lo que caracteriza a estas naturalezas superiores
+que llegan a ser libre es una ordenación de sus impulsos, fruto de su
+disciplina y autodominación, que se traduce en un nivel de exigencia
+más elevado y feliz. Tienen la capacidad de coordinar y reconfigurar
+dentro de sí una muy amplia riqueza y multiplicidad de pulsiones
+distintas e incluso contradictorias, imponiendo un afecto dominante y
+diferenciador que impide la anarquía de los impulsos subordinándolos y
+jerarquizándolos en torno a él.\\[0pt]
+Esto es lo que permita evitar la dispersión y favorecer la acumulación
+de la fuerza, para hacer frente a as otras fuerzas externas.\\[0pt]
+
+Por otro lado, la falta de libertad, propia de las naturalezas
+débiles, es el signo de una idiosincrasia pulsional anárquica,
+descontrolada, que sólo puede sentir crecer su sentimiento de poder
+subordinándose a otras fuerzas externas que le controlen desde fuera
+su anarquía y descontrol internos. Así, la liberta designa el
+privilegio de idiosincrasia pulsionales coordinadas y bien
+estructuradas, que hacen posible la optimización de la fuerza y
+producen un pensamiento y una acción espontáneamente creadores.\\[0pt]
+
+Esta \textbf{libertad se ejerce} comprendiendo que el ser humano es un simple
+actor, que se sabe y se quiere como actor, que sabe que sus acciones y
+sus comportamientos no son más que roles a representar en las
+distintas situaciones de su existencia. El problema de la libertad es
+decidir si representa su papel tal como ha sido condicionado o
+determinado por su educación. Es decir, por lo que los demás han hecho
+de él, o bien si busca creativamente nuevos roles y de este modo se
+construye libremente a sí miso. Todo ser humano está condicionado por
+los factores y circunstancias de su educación, de su origen, de su
+lenguaje, de los valores que ha incorporado y que se han inscrito en
+su cuerpo y en sus impulsos. Sin embargo, esto no significa un
+determinismo absoluto, sino que es posible la libertad y el
+ennoblecimineto si el individuo lucha por superar esos
+condicionamientos gregarios para convertirse en alguien original y
+superior.\\[0pt]
+
+Queda excluida la hipótesis científica de un ser humano como organismo
+biológicamente constituido, e.g. por sus genes, y al cual luego se
+incorporan elementos externos como sus valores, hábitos etc. Para
+N. incorporar no significa añadir algo nuevo a una especie de
+naturaleza o de código genético que desde el principio es lo
+originario y sustancial del ser humano, sino configurar el cuerpo
+desde cero, convertir en cuerpo una determinada estructura pulsional,
+una serie de dispositivos pulsionales requeridos como condiciones de
+existencia. Se nos ha condicionado mediante la educación con unas
+técnicas destinadas a modificar la economía pulsional de nuestro
+cuerpo. Esta técnicas, aplicadas durante un largo espacio de tiempo,
+consiguen fijar en nosotros ciertas regularidades de reaccionar y de
+comportarnos, hasta crearnos una especie de identidad o personalidad
+como yo-mismo.\\[0pt]
+Esta misma estrategia es la que tiene ahora que seguir el espíritu
+libre para sustituir, si es necesario, ese condicionamiento por
+otro.\\[0pt]
+Puesto que un nuevo valor logra imponerse mediante una coacción
+duradera y logra así nuevos dispositivos pulsionales, es posible poner
+en práctica esa misa coacción a la economía pulsional del cuerpo y
+hacer nuevos valores, nuevas condiciones de existencia.\\[0pt]
+
+Construir en uno mismo un tipo superior de ser humano en conformidad
+con el impulso de autosuperación implica hacerlo necesario. Hacer
+necesario el azar de las luchas que forman a los individuos una
+necesidad, la necesidad de la que surge ese carácter superior.\\[0pt]
+El objetivo de la libertad sería llegar a ser lo que se es, es decir
+llegar a ser lo que se puede ser.\\[0pt]
+
+Esta propuesta de realizar un hombre nuevo y una cultura nueva, que
+lleguen a ser lo que podrían ser, no corresponde a un ingenuo
+voluntarismo, sino que se trata de incardinar en las condiciones de
+creación de toda cultura.\\[0pt]
+Por eso N. intenta dar la vuelta a la concepción básica de nuestra
+cultura occidental, en su pensamiento más maduro, y ofrecer una nueva
+visión del mundo a partir de la hipótesis de voluntad de poder, en la
+que es posible entender el ejercicio de la libertad como construcción
+positiva de uno mismo y de la cultura.\\[0pt]
+
+El ejemplo de cómo se conquista la libertad lo tenemos en la nueva
+concepción del filósofo como espíritu libre y de la filosofía que se
+derivan de este planteamiento. La libertad de espíritu representa la
+primera característica del filósofo y del concepto de filosofía, como
+capacidad de afrontar lo desconocido con una actitud indagadora
+sincera y radical.\\[0pt]
+Esto es así porque lo que sucede a muchos filósofos y científicos que
+anteponen la necesidad de certeza, de seguridad y de estabilidad al
+placer de la libertad es que acaban siendo espíritus sometidos y
+dependientes. La libertad de espíritu se define por la independencia,
+por la capacidad de poder pensar y actuar sin estar sometido a la
+autoridad de los valores en vigor, e.g. empezando por el valor de
+verdad o de bondad atribuido a l ideal científico moderno.\\[0pt]
+
+La independencia del espíritu libre se mide por su capacidad de pensar
+y de vivir en función de valores diferentes a los comunes, incluso
+opuestos a éstos si fuera necesario.\\[0pt]
+Nietzsche representa el espíritu libre con las metáforas del
+explorador o del aventurero. Pues la libertad e independencia es lo
+que le permite descubrir, ensayar y crear nuevos valores y nuevas
+interpretaciones. Esta misma independencia del espíritu libre la
+aplica también a la cuestión de las creencias, afirmando que lo propio
+de este espíritu libre es carecer, en buena medida, de ellas: Cuando
+un hombre llega a la convicción básica de que se le tiene que dar
+órdenes, se torna creyente. A la inversa, una liberta de la voluntad
+en la que un espíritu despida de toda creencia, de todo deseo de
+certeza como si se mantuviere sobre cuerdas y posibilidades ligeras y
+en bailar hasta al borde de los abismos. Un espíritu tal sería el
+espíritu libre por excelencia.\\[0pt]
+
+Con esto Nietzsche se refiere al tipo humano de la metafísica y de l
+cristianismo tradicionales, que vive y regula su existencia en función
+de certezas dogmáticas y creencias absolutas. El tipo humano que liga
+obediencia de manera fundamental a la creencia. Se convierte así en un
+esclavo. Porque lo instintivo del escalo es, justamente, la necesidad
+de absolutos, y esa necesidad la mediatizan siempre unas creencias.\\[0pt]
+La jerarquía de los tipos humanos, establecidas en función de su mayor
+o menor fuerza, podría tener como uno de sus criterios diferenciales
+su mayor o menor necesidad de creencias. Lo que él viene a decir
+entonces es que cuanta mayor fuerza tiene un individuo, menos
+necesidad tiene de estas certezas absolutas, que son en realidad,
+elementos de protección y de seguridad como remedio a su debilidad.
 \end{document}
