--- a/Nietzsche/nietzsche_tardio.org
+++ b/Nietzsche/nietzsche_tardio.org
@@ -321,3 +321,201 @@ Y esto es también lo que significa asumir un destino como ley que
 reorganiza una y otra vez la existencia, actualizando siempre de nuevo
 las metas por las que discurre y haciendo posible así el despliegue
 del impulso de autosuperación.
+
+* El eterno retorno u la noción de interpretación
+La contradicción entre el eterno retorno e historia se desvanece desde
+el momento en que se comprende el eterno retorno como un
+acontecimiento histórico, como algo que sucede y acontece dentro de la
+historia. En vez de ser una verdad ontológica sobre el ser del sí del
+tiempo, no sería más que una interpretación que cuando se adopta,
+cuando se afirma, se vive la inanidad, la vacuidad, la futilidad de
+todo sentido creído como significado o verdad en sí del mundo y se
+descubre la inconsistencia de todos los pretendidos valores absolutos,
+llegándose a la consumación del nihilismo. Asumiendo el eterno retorno
+como interpretación, el individuo toma conciencia de que la historia
+misma no es otra cosa que una confrontación incesante de
+interpretaciones y de opciones de valor en la que la consumación final
+del nihilismo no sería más que un acontecimiento de este tipo.\\
+
+La aceptación del eterno retorno podría dar lugar a una reorientación
+de la historia con valor de novedad sobre la que ya había, y
+determinar su curso en la dirección precisamente que no permiten las
+concepciones ontológicas: en la dirección de una libre creación del
+destino de la humanidad al convencer a ésta de la ausencia de leyes
+internas ocultas y de sentidos prestablecidos respecto de los cuales
+los individuos sólo son seguidores e instrumentos.\\
+Por eso, el eterno retorno puede cumplir una función dismitificadora,
+desestabilizadora y corrosiva radical de las comprensiones metafísicas
+de la historia, y teniendo un contenido un determinismo total e
+incluso un fatalismo, puede, sin embargo, introducir el azar en el
+concepto de historia.\\
+
+Si el eterno retorno no es más que una interpretación instrumental, no
+una verdad en sí, es compatible con una idea de la historia en la que
+ninguna necesidad superior al individuo ordena el devenir al
+cumplimiento de fines universales. La única necesidad que actúa en la
+historia son los individuos, que se comportan a través de
+interpretaciones y posiciones de valor. El devenir está abierto a
+posibilidades distintas que sólo dependen de los seres humanos mismos,
+de las interpretaciones y valoraciones que dan a su vida y a sus
+actos. El eterno retorno no es más que una de estas interpretaciones,
+con la que el ser humano podría superar el nihilismo.\\
+
+Por otro lado, otra de las ventajas de este pensamiento del eterno
+retorno es que permite entender la historia sin necesidad de pensar en
+un final de ella como una ruptura y nuevo comienzo. Como simple
+interpretación y como experiencia afirmativa, el eterno retorno puede
+cambiar el curso de la historia inaugurando una etapa de mayor
+autonomía y emancipación individual. Esto, no quiere decir que el
+eterno retorno —la consumación del nihilismo— lleve la historia a su
+final y le dé asó un nuevo sentido, aunque negativo, encerrándola en
+una totalidad. El nihilismo no designa en N a la historia como tal,
+sino sólo a la historia europea y, dentro de ella, a la época
+presidida por la fe cristiana y sus consecuencias.\\
+
+La consumación del nihilismo no puede hacer pensar en una teleología
+catastrófica determinada por un destino como necesidad superior. No
+hay más destino que el que se sigue de una opción histórica que no es
+nada predeterminado como ley ontológica, sino un punto de partida
+azaroso. El destino que obra en la historia del nihilismo es algo que
+determinadas decisiones humanas crearon, no es el Ser el que destina
+aquí, sino que son la decisiones humanas.\\
+
+La historia así entendida no tendría ninguna unidad, no sería ninguna
+totalidad cerrada entre un principio y un final únicos. Sería sin
+principio ni fin. La historia no es más que la sucesión de posiciones
+de valor y significados perspectivas en lucha, a través de los cuales
+diferentes tipos de individuos tratan de justificarse y predominar
+sobre los demás. El cometido a cumplir por la idea del eterno retorno
+no es más que el de presentarse como una interpretación instrumental
+para modificar la comprensión de la historia, y dejar de verla
+justamente como un proceso ontológico.\\
+
+La acción renovadora, autosuperadora que se desea promover, no
+significa no representa ningún corte, el final de la historia y el
+comienzo de un más allá, sino sólo un cambio que se produce dentro de
+la historia, una transformación cuya estructura no es sustancialmente
+distinta a la estructura de misma del devenir histórico y del devenir
+del mundo en general, un simple cambio de interpretaciones y de
+valoraciones, una transvaloración.\\
+
+La transvaloración no es más que una confrontación entre
+interpretaciones, un acontecimiento más en la cadena de luchas y
+enfrentamientos entre centros desiguales de poder, en torno a los que
+gira, como su eje, el conjunto de todo lo que existe. Se trataría sólo
+de una acontecimiento determinado por el triunfo de un tipo de
+voluntad de poder que implicaría, si se produjera, la reorientación
+del curso del curso de la historia en una dirección distinta a la que
+le han dado el predominio de otras relaciones de fuerzas. No hay más
+que un juego de voluntades de poder que es amoral, que no es tampoco
+ontológico, y que no puede dar apoyo a ideologías ni verdaderas ni
+falsas, ni buenas ni malas, sino tan solo provechosa o perjudiciales
+relativamente, según la óptica de la vida y por referencia a un
+individuo o a un grupo de individuos determinado.\\
+
+* La hipótesis de la voluntad de poder
+La propuesta nietzscheana de la voluntad de poder tiene el carácter de
+una simple hipótesis y no el de una tesis ontológica o incluso
+metafísica. Esta hipótesis se formula para explicar y comprender, de
+manera particular y concreta , el movimiento, la acción o el acontecer
+del mundo, contraponiéndola al modo en que este acontecer había sido
+explicado tanto por la metafísica como por la ciencia.\\
+
+La voluntad de poder introduce la novedad de entender el universo como
+un relacionarse entre sí de una pluralidad de centros de fuerza que
+tienen las mismas características de lo que nosotros conocemos como
+voluntad, como querer. No habría más motor que inicie e impulse el
+movimiento del mundo que la interacción de estas fuerzas o voluntades
+unas con otras.\\
+Estas interacciones de voluntades sustituiría a la de la relación
+causa-efecto, que era la base tanto de las explicaciones metafísicas
+como científicos del acontecer del mundo.\\
+
+La voluntad de poder se caracteriza por el /pathos/ del querer, que es
+siempre un mandar. Frente al esquema anterior de causa y efecto,
+N. trata de ofrecer un nuevo modelo explicativo que es el de la
+relación mandar-obedecer.\\
+Critica del modelo causa-efecto el recaer inevitablemente en un
+determinismo: de las causas se siguen necesariamente los efectos, y
+esto no puede ser más que así, si alteración posible.\\
+
+Para Nietzsche lo que sucede es lo propio de la relación
+mandar-obedecer, que hay una fuerza que quiere poder más que las demás
+y que manda desde un sentido de superioridad o de mayor fuerza a las
+fuerzas que quiere que le obedezcan. Lo que hay son fuerzas mayores o
+más poderosas que tratan de dominar a las menos fuertes, las cuales
+pueden, o bien ceder y obedecer a ese mandato, o bien resistirse y
+negarse a doblegarse.\\
+
+El mandar transmite algo que no es simplemente una orden externa que
+se emite en el plano consciente. Por debajo de esta orden externa, lo
+que transmite el mandar es un impulso, una fuerza que provoca en la
+otra voluntad una modificación y una transformación concomitante. Se
+produce en la voluntad a la que va dirigida el mandato desde dentro de
+ella misma y de manera autónoma: Ante la presión del mandato ejercido
+por la fuerza que se propone como superior, la fuerza destinataria
+puede obedecer o bien resistirse al mandato. En los dos casos hay una
+modificación que se produce desde dentro y autónomamente. No hay aquí
+el determinismo externo de la relación causa-efecto, sin ninguna
+posibilidad de que el efecto no se produzca. En cambio, en la relación
+mandar-obedecer existe esa transformación desde dentro que se produce,
+en las dos fuerzas en lucha, de manera autónoma.\\
+
+Para Nietzsche el planteamiento de la ciencia moderna es ilusorio,
+porque consiste en la simulación de estar fuera del mundo y tratar de
+ver desde fuera relaciones externas de causa.efecto entre las
+cosas. La ciencia moderna lo llama objetividad, porque uno de sus
+principios básicos es el que de que el conocimiento científico no
+puede tener nada de subjetivo.\\
+Para Nietzsche esto es absurdo, porque no es posible salir uno de uno
+mismo y del mundo para ver las cosas desde esa exterioridad
+objetiva.\\
+Propone es reconocer que nuestro acceso al conocimiento del mundo
+parte, lo queramos o no, de dentro de nosotros mismos, y sobre todo
+parte de la experiencia de nuestro propio cuerpo como lucha de fuerzas
+y enfrentamiento de voluntades de poder. Su propuesta metodológica es:
+tomar el cuerpo como hilo conductor de toda investigación; suponiendo
+que nuestro mundo de apetitos y pasiones sea lo único real que está
+dado, que no podamos ascender o descender hacia ninguna otra realidad
+que precisamente la realidad de nuestras pulsiones, pues pensar es
+solo una interacción de estas pulsiones entre sí. De aquí, es lícito
+el planteamiento de si este estar dado no bastaría para comprender
+también, partiendo de lo idéntico a sí mismo, el llamado mundo
+mecánico, material, el mundo visto desde dentro, el mundo definido y
+caracterizado de acuerdo con su carácter inteligible, sería justamente
+voluntad de poder y nada más.\\
+
+Nietzsche piensa que la energía constante total del mundo, movida por
+la aspiración de las voluntades de poder que la integran hacia el
+logro de un máximum de poder, alcanzaría un determinado novel cenital
+de organización como suma de fuerzas en juego, como un vértice, en la
+jerarquización interna del mundo. Una vez alcanzado, se hundiría
+disgregándose de nuevo en una multiplicidad anárquica. Esto sería un
+círculo eterno. El sentido de Dios sería Dios como estado máximo, como
+un época, un punto en el desarrollo de la voluntad de poder desde el
+cual se explicaría tanto el desarrollo ulterior como lo previo, la
+hasta-él.\\
+Dionisio es ese dios que muere despedazado y vuelve a renacer de sí
+mismo como consecuencias de lo que la naturaleza es en cuanto
+pluralidad de voluntades de poder. El caos del mundo no contradice el
+orden de un retorno cíclico y regular. Ambas cosas proceden de lo que
+la voluntad es. El devenir, el ciclo, se origina así en la lucha
+incesante de las voluntades de poder.\\
+
+Otro punto esencial de esto es el modo en que tiene lugar el combate
+entre las fuerzas por lograr el máximo poder. Esto es justamente el
+ejercicio de la evaluación y de a interpretación, la imposición por
+parte de una fuerza dominante de un sentido o de un valor a las otra
+fuerzas en función del juego de dominación propio de los afectos en
+lucha.\\
+Interpretar una cosa, evaluarla, es imponerle un significado o
+conferirle un valor. Y ese es el medio más originario de intentar
+dominarla.\\
+Esta actividad de interpretación y de evaluación de la voluntad como
+un proceso de digestión de la realidad por el que una fuerza crece
+alimentándose de otras fuerzas. Esta asimilación es siempre selectiva,
+empieza con un acto de discriminación de las fuerzas para asimilar
+aquellas que se estiman coo susceptibles de ser eficazmente
+incorporadas, por su capacidad para autofortalecer y aumentar el nivel
+propio de poder, mientras que todo lo que no se estima útil para este
+fin es desestimado y desechado
